--- a/index.html
+++ b/index.html
@@ -65,11 +65,88 @@
       <h6 class="fs-lg fw-noraml line-height-32 pt-1 color-gray m-0 font-Helvetica">Submit by May 1, 2023</h6>
     </div>
   </section>
+  <section class="position-relative" id="about">
+    <img src="./assets/img/svg/Ellipse21.svg" alt="Ellipse21"
+      class="position-absolute Ellipse21  z-n1 max-w-399 w-100 ">
+    <div class="container max-w-1140  pb-lg-90 pb-sm-60 pb-4 z-1">
+      <div class="translate-y-76 z-1">
+        <div class="rounded-16 first-box  position-relative  duration-300">
+          <div class="row">
+            <div class="col-lg-4 col-sm-6 col-12 ">
+              <div class="d-flex gap-lg-3 gap-2 align-items-center">
+                <img src="./assets/img/svg/Cash.svg" alt="Cash">
+                <h6 class="fs-lg fw-normal line-height-32  m-0 font-Helvetica"><span class="fw-bold"> $60,000</span>
+                  Cash Prizes</h6>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6  col-12  d-lg-flex pt-4 pt-sm-0 d-block  justify-content-center ">
+              <div class="d-flex gap-lg-3 gap-2 align-items-center max-w-255 w-100">
+                <img src="./assets/img/svg/Acceptance.svg" alt="Acceptance">
+                <h6 class="fs-lg fw-normal line-height-32  m-0 font-Helvetica"><span class="fw-bold">6%</span> Acceptance
+                  Rate</h6>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6  col-12  d-lg-flex pt-4 pt-lg-0 d-block justify-content-end">
+              <div class="d-flex gap-lg-3 gap-2  align-items-center max-w-236 w-100">
+                <img src="./assets/img/svg/Quarterly.svg" alt="Quarterly">
+                <h6 class="fs-lg fw-normal line-height-32  m-0 font-Helvetica"><span
+                    class="fw-bold ">Published</span> Quarterly</h6>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6  col-12  pt-lg-44 pt-4 ">
+              <div class="d-flex gap-lg-3 gap-2 align-items-center ">
+                <img src="./assets/img/svg/Grades.svg" alt="Grades">
+                <h6 class="fs-lg fw-normal line-height-32  m-0 font-Helvetica">Grades<span
+                    class="fw-bold">9–12,</span> Worldwide</h6>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6  col-12 pt-lg-44 pt-4 d-lg-flex d-block justify-content-center">
+              <div class="d-flex gap-lg-3 gap-2 align-items-center max-w-255 w-100  ">
+                <img src="./assets/img/svg/Zero.svg" alt="Zero">
+                <h6 class="fs-lg fw-normal line-height-32  m-0 font-Helvetica"><span
+                    class="fw-bold">Zero</span> Submission Fees</h6>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6  col-12  pt-lg-44 pt-4 d-lg-flex d-block justify-content-end">
+              <div class="d-flex gap-lg-3 gap-2 align-items-center max-w-236 w-100 ">
+                <img src="./assets/img/svg/Access.svg" alt="Access">
+                <h6 class="fs-lg fw-normal line-height-32  m-0 font-Helvetica"><span class="fw-bold">Open</span> Access
+                </h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex w-100  justify-content-center pt-32">
+            <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+                class=" z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">Submit</span>
+              <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
+          </div>
+        </div>
+      </div>
+      <div class="max-w-948 mx-auto pt-44  position-relative">
+        <img src="./assets/img/Frame13.png" alt="Frame13" class="w-100">
+        <div class="icon-1 position-absolute ">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.0125 0C8.94424 0 0 8.97751 0 20.0261C0 28.7475 5.54544 36.1638 13.3416 38.901V21.585C14.2112 21.4581 15.0807 21.3811 16 21.3811V39.642C16.8673 39.821 17.7639 39.9501 18.6584 40V21.585C19.5777 21.7391 20.497 21.943 21.3167 22.2262V40C22.2361 39.9501 23.1305 39.821 24 39.642V23.4272C24.3306 23.6062 24.6906 23.8101 24.9963 24.0412C25.61 24.4514 26.1715 24.9113 26.6833 25.4234V38.901C30.5689 37.546 33.8908 34.9878 36.2683 31.7136C38.6187 28.4144 40 24.3992 40 20.0261C40 8.97751 31.0535 0 20.0125 0ZM28.0125 20.051H12.0125V16.0358C18.1466 16.0358 23.7441 17.0079 28.0125 18.5691V20.051ZM30.6708 14.7057H9.32918V10.7155H30.6708V14.7057Z" fill="url(#paint0_linear_41260_10542)"/>
+            <defs>
+            <linearGradient id="paint0_linear_41260_10542" x1="0" y1="0" x2="29.6532" y2="45.2991" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#F4EAD8"/>
+            <stop offset="1" stop-color="#E0B764"/>
+            </linearGradient>
+            </defs>
+            </svg>
+            
+        </div>
+        <button class="playbtn py-1 px-3  position-absolute rounded-1 border-0">
+          <svg width="13" height="16" viewBox="0 0 13 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M11.6043 7.14679C12.2422 7.53675 12.2422 8.46325 11.6043 8.85321L1.77158 14.8641C1.10523 15.2714 0.249999 14.7919 0.249999 14.0109L0.25 1.98913C0.25 1.20814 1.10523 0.72858 1.77157 1.13593L11.6043 7.14679Z" fill="#FCF9F6"/>
+          </svg>
+          <sapn class="font-Helvetica fw-normal fs-md line-height-25 text-white">Play Video</sapn>
+            
+        </button>
 
-
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-
+      </div>
+    </div>
+  </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
