--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Julian Project</title>
+  <title>Julian 2</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -122,9 +122,11 @@
           </div>
         </div>
       </div>
-      <div class="max-w-948 mx-auto pt-44  position-relative">
-        <img src="./assets/img/Frame13.png" alt="Frame13" class="w-100">
-        <div class="icon-1 position-absolute ">
+      <div class="max-w-948 mx-auto pt-44 position-relative">
+        <div class="img-border position-relative">
+          <img src="./assets/img/10.gif" alt="Frame13" class="w-100 rounded-6">             
+        </div>
+        <div class="icon-1 position-absolute">
           <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M20.0125 0C8.94424 0 0 8.97751 0 20.0261C0 28.7475 5.54544 36.1638 13.3416 38.901V21.585C14.2112 21.4581 15.0807 21.3811 16 21.3811V39.642C16.8673 39.821 17.7639 39.9501 18.6584 40V21.585C19.5777 21.7391 20.497 21.943 21.3167 22.2262V40C22.2361 39.9501 23.1305 39.821 24 39.642V23.4272C24.3306 23.6062 24.6906 23.8101 24.9963 24.0412C25.61 24.4514 26.1715 24.9113 26.6833 25.4234V38.901C30.5689 37.546 33.8908 34.9878 36.2683 31.7136C38.6187 28.4144 40 24.3992 40 20.0261C40 8.97751 31.0535 0 20.0125 0ZM28.0125 20.051H12.0125V16.0358C18.1466 16.0358 23.7441 17.0079 28.0125 18.5691V20.051ZM30.6708 14.7057H9.32918V10.7155H30.6708V14.7057Z" fill="url(#paint0_linear_41260_10542)"/>
             <defs>
@@ -145,6 +147,103 @@
         </button>
 
       </div>
+    </div>
+  </section>
+  <section class="position-relative" >
+    <img src="./assets/img/Group2.png" alt="group2" class="position-absolute group2  z-0  d-none d-lg-block">
+    <img src="./assets/img/Group.png" alt="Group"
+      class="position-absolute Group z-n1 max-w-1000 w-100">
+    <img src="./assets/img/svg/Ellipse22.svg" alt="Ellipse22"
+      class="position-absolute Ellipse22  z-0 animation-fadein  ">
+    <div class="container max-w-1140 pb-lg-90 pb-sm-60 pb-5">
+      <div class="d-flex flex-column align-items-center  ">
+        <h2 class="fw-bold fs-4xl color-black max-w-524 text-center line-height-55 m-0 font-Helvetica z-1">Start Writing
+          Your Own History Paper</h2>
+        <h6 class=" fs-md pt-3 m-0 color-black opacity-7 pb-sm-48 pb-3 line-height-25 fw-normal font-Helvetica z-1">Choose your
+          topic. Find expert guidance. Create a thesis and bring it to life.</h6>
+      </div>
+      <div class="row  pb-sm-44">
+        <div class="col-lg-6 col-12 z-1">
+          <div class="d-flex flex-column gap-3 allbtn">
+            <div onclick="clickhere('tab1')" class="tabbtn ">
+              <div class="tab-box max-lg-w-485 bg-white cursor-pointer">
+                <div class="d-flex justify-content-between ">
+                  <h5 class="fw-bold font-Helvetica line-height-32 fs-lg color-black m-0">World Class Research</h5>
+                  <img src="./assets/img/svg/tabarrow.svg" alt="tabarrow">
+                </div>
+                <h6 class="fs-md fw-noraml line-height-25 pt-2  color-black opacity-7 m-0 font-Helvetica">The Julian Project offers
+                  free online self-paced courses for aspiring historians to dive deeper into historical research.</h6>
+              </div>
+            </div>
+            <div onclick="clickhere('tab2')" class="tabbtn">
+              <div class="tab-box max-lg-w-485 bg-white cursor-pointer">
+                <div class="d-flex justify-content-between">
+                  <h5 class="fw-bold font-Helvetica line-height-32 fs-lg color-black m-0">Think Big, Dive Deep</h5>
+                  <img src="./assets/img/svg/tabarrow.svg" alt="tabarrow">
+                </div>
+                <h6 class="fs-md fw-noraml line-height-25 pt-2  color-black opacity-7 m-0 font-Helvetica">Embarking on writing an
+                  extensive history research paper offers an immersive journey into the depths of the past.</h6>
+              </div>
+            </div>
+            <div onclick="clickhere('tab3')" class="tabbtn">
+              <div class="tab-box max-lg-w-485 bg-white cursor-pointer">
+                <div class="d-flex justify-content-between">
+                  <h5 class="fw-bold font-Helvetica line-height-32 fs-lg color-black m-0">Research Recognition</h5>
+                  <img src="./assets/img/svg/tabarrow.svg" alt="tabarrow">
+                </div>
+                <h6 class="fs-md fw-noraml line-height-25 pt-2  color-black opacity-7 m-0 font-Helvetica">The Julian Project
+                  annually awards prizes to the authors of that year’s most distinguishing papers.</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-12 z-1 pt-4 pt-lg-0">
+          <div id="tab1" class="tabcontant ">
+            <div class="d-flex gap-3  align-items-center">
+              <img src="./assets/img/svg/tabimg.svg" alt="tabimg">
+              <div class="d-flex flex-column">
+                <h5 class="font-Helvetica fw-normal fs-md line-height-25   m-0">Vinay, 18 (UAE)</h5>
+                <h6 class="font-Helvetica fw-normal fs-sm opacity-7 color-black m-0 ">Student</h6>
+              </div>
+            </div>
+            <h6 class="m-0 font-Helvetica fs-md line-height-25 fw-normal color-black opacity-7 pt-28 max-w-575">The Julian Project
+              offers academic opportunities beyond theclassroom for aspiring historians to dive deeper into historical
+              research.Our goal is to make the study of history more accessible to all. Especiallyfor First-Generation
+              and Low-Income (FGLI) students, we offer free,individual mentorship throughout the year to help guide you
+              on thisenriching journey. We rely on donations to make these opportunitiespossible and hope you could
+              contribute to The Julian Project.</h6>
+          </div>
+          <div id="tab2" class="tabcontant ">
+            <div class="d-flex gap-3  align-items-center">
+              <img src="./assets/img/svg/slickdp.svg" alt="tabimg">
+              <div class="d-flex flex-column">
+                <h5 class="font-Helvetica fw-normal fs-md line-height-25   m-0">Anamika, 19 (UAE)</h5>
+                <h6 class="font-Helvetica fw-normal fs-sm color-black opacity-7 m-0 ">Master</h6>
+              </div>
+            </div>
+            <h6 class="m-0 font-Helvetica fs-md line-height-25 fw-normal  color-black opacity-7 pt-28 max-w-575">The Julian Project
+              offersdklafj;klasdjhfkljaselkf and Low-Income (FGLI) students, we offer free,individual mentorship
+              throughout the year to help guide you on thisenriching journey. We rely on donations to make these
+              opportunitiespossible and hope you could contribute to The Julian Project.</h6>
+          </div>
+          <div id="tab3" class="tabcontant">
+            <div class="d-flex gap-3  align-items-center">
+              <img src="./assets/img/svg/slickdp2.svg" alt="tabimg">
+              <div class="d-flex flex-column">
+                <h5 class="font-Helvetica fw-normal fs-md line-height-25   m-0">Payal, 20(USA)</h5>
+                <h6 class="font-Helvetica fw-normal fs-sm color-black opacity-7 m-0 ">Research Recognition</h6>
+              </div>
+            </div> 
+            <h6 class="m-0 font-Helvetica fs-md line-height-25 fw-normal  color-black opacity-7 pt-28 max-w-575">Lorem ipsum dolor
+              sit amet, consectetur adipisicing elit. Harum, ullam, quia, repudiandae reiciendis vitae veritatis nam
+              laboriosam voluptas totam ad dolores at iusto. Ipsum asperiores sed laudantium quas deleniti alias?
+            </h6>
+          </div>
+        </div>
+      </div>
+      <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+          class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">Read More</span> <img
+          src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
     </div>
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
