--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <link rel="stylesheet" href="./assets/css/style.css">    
 </head>
 <body>
-  <section class="position-relative  bg-hero-img min-vh-100">
+  <section class="position-relative  d-none bg-hero-img min-vh-100">
     <img src="./assets/img/svg/Ellipse11.svg" alt="Ellipse11" class="position-absolute Ellipse11  z-0 ">
     <img src="./assets/img/svg/Ellipse12.svg" alt="Ellipse12"
-      class="position-absolute Ellipse12 d-none d-md-block  z-n1 animation-fadein">
+      class="position-absolute Ellipse12 d-none d-md-block  z-n1 ">
     <div class="container max-w-1140   ">
       <nav class="d-flex justify-content-between align-items-center py-sm-30  py-3">
         <div class="logo">
@@ -65,9 +65,9 @@
       <h6 class="fs-lg fw-noraml line-height-32 pt-1 color-gray m-0 font-Helvetica">Submit by May 1, 2023</h6>
     </div>
   </section>
-  <section class="position-relative" id="about">
+  <section class="position-relative d-none" id="about">
     <img src="./assets/img/svg/Ellipse21.svg" alt="Ellipse21"
-      class="position-absolute Ellipse21  z-n1 max-w-399 w-100 ">
+      class="position-absolute Ellipse21  z-n1 max-w-399 w-100  ">
     <div class="container max-w-1140  pb-lg-90 pb-sm-60 pb-4 z-1">
       <div class="translate-y-76 z-1">
         <div class="rounded-16 first-box  position-relative  duration-300">
@@ -149,12 +149,12 @@
       </div>
     </div>
   </section>
-  <section class="position-relative" >
-    <img src="./assets/img/Group2.png" alt="group2" class="position-absolute group2  z-0  d-none d-lg-block">
+  <section class="position-relative d-none" >
+    <img src="./assets/img/Group2.png" alt="group2" class="position-absolute group2  z-0  d-none d-lg-block ">
     <img src="./assets/img/Group.png" alt="Group"
-      class="position-absolute Group z-n1 max-w-1000 w-100">
+      class="position-absolute Group z-n1  w-100">
     <img src="./assets/img/svg/Ellipse22.svg" alt="Ellipse22"
-      class="position-absolute Ellipse22  z-0 animation-fadein  ">
+      class="position-absolute Ellipse22  z-0   ">
     <div class="container max-w-1140 pb-lg-90 pb-sm-60 pb-5">
       <div class="d-flex flex-column align-items-center  ">
         <h2 class="fw-bold fs-4xl color-black max-w-524 text-center line-height-55 m-0 font-Helvetica z-1">Start Writing
@@ -244,6 +244,62 @@
       <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
           class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">Read More</span> <img
           src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
+    </div>
+  </section>
+  <section class="bg-third-img position-relative overflow-hidden" id="scholarships">
+    <img src="./assets/img/svg/Ellipse4first.svg" alt="ellipse"
+      class="position-absolute Ellipse4first  z-0 max-w-399 w-100 animation-fadein">
+    <img src="./assets/img/svg/Ellipse4sec.svg" alt="ellipse"
+      class="position-absolute Ellipse4sec z-0  max-w-399 w-100 animation-fadein">
+    <div class="container max-w-1140">
+      <div class="d-flex flex-column align-items-center pt-lg-100 pt-sm-60 pt-5 ">
+        <h2 class="line-height-55 fw-bold fs-4xl heading m-0 font-Helvetica text-center z-1">The Corona Civica</h2>
+        <h6 class="max-w-662 fs-md pt-3 m-0 opacity-7  text-white  line-height-25 fw-normal text-center font-Helvetica z-1">To
+          bridge the inequality gap in the humanities, The Julian Grant recognizes and supports the remarkable
+          achievements of First-Generation Low-Income (FGLI) historians.</h6>
+      </div>
+      <div class="row box -4">
+        <div class="col-md-4 col-sm-6  col-12 pt-117 z-1">
+          <img src="./assets/img/Frame49.png" alt="Frame49" class="w-100">
+        </div>
+        <div class="col-md-4 col-sm-6  col-12  z-1">
+          <img src="./assets/img/Frame50.png" alt="Frame50" class="w-100">
+        </div>
+        <div class="col-md-4 col-sm-6  col-12 pt-117 z-1">
+          <img src="./assets/img/Frame51.png" alt="Frame51" class="w-100">
+        </div>
+      </div>
+      <h5 class="fw-normal line-height-38 fs-xl text-white m-0  pt-44 text-center font-Helvetica">We evaluate papers on
+        the basis of </h5>
+      <div class="row  pt-32 pb-lg-100 pb-sm-60 pb-5 z-2 box -5">
+        <div class="col-lg-4  col-sm-6 col-12">
+          <div class="card p-3 w-100 rounded-24   duration-300 h-100">
+            <img src="./assets/img/svg/Historical.svg" alt="historical" class="w-40">
+            <h5 class="fw-bold fs-md line-height-25 pt-4 text-white font-Helvetica m-0">Historical Importance</h5>
+            <h6 class="max-w-436 fs-md pt-3 m-0 text-white opacity-7 pb-32 line-height-25 fw-normal font-Helvetica">Why is the
+              history paper important? How does it contribute to the broader understanding of our shared past? How does
+              the paper’s topic shape the course of history?</h6>
+          </div>
+        </div>
+        <div class="col-lg-4  col-sm-6 col-12 pt-3 pt-sm-0">
+          <div class="card p-3 w-100 rounded-24   duration-300 h-100 ">
+            <img src="./assets/img/svg/Authorship.svg" alt="Authorship" class="w-40">
+            <h5 class="fw-bold fs-md line-height-25 pt-4 text-white font-Helvetica m-0">Authorship</h5>
+            <h6 class="max-w-436 fs-md pt-3 m-0 text-white opacity-7 pb-32 line-height-25 fw-normal font-Helvetica">Is the paper
+              interesting to read? Is it free of grammatical errors and misinformation? Does it follow guidelines and
+              accurately present the author’s analysis?</h6>
+          </div>
+        </div>
+        <div class="col-lg-4  col-sm-6 col-12 pt-3 pt-lg-0">
+          <div class="card p-3 rounded-24   duration-300 w-100 h-100">
+            <img src="./assets/img/svg/Originality.svg" alt="Originality" class="w-40">
+            <h5 class="fw-bold fs-md line-height-25 pt-4 text-white font-Helvetica m-0">Originality</h5>
+            <h6 class="max-w-436 fs-md pt-3 m-0 text-white opacity-7 pb-32 line-height-25 fw-normal font-Helvetica">How original is
+              the author’s topic or thesis? Does it make it a novel claim in an already heavily talked about topic? Does
+              it go against scholarly consensus?</h6>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
