--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
     </div>
   </section>
-  <section class="bg-third-img position-relative overflow-hidden" id="scholarships">
+  <section class="bg-third-img position-relative overflow-hidden d-none" id="scholarships">
     <img src="./assets/img/svg/Ellipse4first.svg" alt="ellipse"
       class="position-absolute Ellipse4first  z-0 max-w-399 w-100 animation-fadein">
     <img src="./assets/img/svg/Ellipse4sec.svg" alt="ellipse"
@@ -298,6 +298,141 @@
               the author’s topic or thesis? Does it make it a novel claim in an already heavily talked about topic? Does
               it go against scholarly consensus?</h6>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="position-relative" >
+    <img src="./assets/img/svg/Ellipse41.svg" alt="Ellipse41"
+      class="position-absolute Ellipse41 d-none d-md-block z-n1 animation-fadein">
+    <img src="./assets/img/Groupslick.png" alt="groupslick" class="position-absolute groupslick z-n1 ">
+    <div class="container max-w-1140 ">
+      <div class="py-lg-130 py-sm-60 py-5">
+        <div class="second-box py-3 px-28 rounded-16 max-w-1000 mx-auto mb-20 bg-white duration-300" id="donate">
+          <h2 class="fw-normal fs-lg line-height-32 pb-3 color-black m-0 font-Helvetica  fst-italic">Donate to The Julian Project.
+            Only with your support can we support the historical research of distinguished high school student.</h2>
+          <div class="d-flex justify-content-between align-items-center">
+            <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+                class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">Donate Now</span>
+              <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
+            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path opacity="0.4"
+                d="M20.0125 0C8.94424 0 0 8.97751 0 20.0261C0 28.7475 5.54544 36.1638 13.3416 38.901V21.585C14.2112 21.4581 15.0807 21.3811 16 21.3811V39.642C16.8673 39.821 17.7639 39.9501 18.6584 40V21.585C19.5777 21.7391 20.497 21.943 21.3167 22.2262V40C22.2361 39.9501 23.1305 39.821 24 39.642V23.4272C24.3306 23.6062 24.6906 23.8101 24.9963 24.0412C25.61 24.4514 26.1715 24.9113 26.6833 25.4234V38.901C30.5689 37.546 33.8908 34.9878 36.2683 31.7136C38.6187 28.4144 40 24.3992 40 20.0261C40 8.97751 31.0535 0 20.0125 0ZM28.0125 20.051H12.0125V16.0358C18.1466 16.0358 23.7441 17.0079 28.0125 18.5691V20.051ZM30.6708 14.7057H9.32918V10.7155H30.6708V14.7057Z"
+                fill="url(#paint0_linear_41260_4828)" />
+              <defs>
+                <linearGradient id="paint0_linear_41260_4828" x1="0" y1="0" x2="29.6532" y2="45.2991"
+                  gradientUnits="userSpaceOnUse">
+                  <stop offset="1" stop-color="#F4EAD8" />
+                  <stop offset="1" stop-color="#E0B764" />
+                </linearGradient>
+              </defs>
+            </svg>
+          </div>
+        </div>
+        <div class="position-relative">
+          <div class="responsive max-w-1000 mx-auto overflow-hidden">
+            <div
+              class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white flex-md-nowrap flex-wrap-reverse position-relative">
+              <div class="max-md-w-551  pt-md-0 mt-18">
+                <h2 class="fw-bold line-height-55 fs-4xl color-black m-0 font-Helvetica">Prize-Winning Projects</h2>
+                <h5 class="fw-bold fs-xl font-Helvetica line-height-27  m-0 pt-3">The Story of <span
+                    class="heading">Civilization</span>
+                </h5>
+                <h6 class=" fs-md font-Helvetica pt-3 m-0 color-gray  line-height-25 fw-normal">Choose your topic. Find
+                  expert guidance. Create a thesis and bring it to life. World-Class. These books cover various periods
+                  and topics in history, offering different perspectives and insights into different civilizations and
+                  events.</h6>
+                <h5 class="fw-normal fs-md font-Helvetica line-height-25 pt-3  m-0 pb-md-48 pb-4">Will Durant & Ariel
+                  Durant</h5>
+                <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+                    class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading ">Read More</span>
+                  <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn" class="z-1"></button>
+              </div>
+              <div class="p-18 slider-img rounded-1 w-100 max-md-w-337">
+                <img src="./assets/img/Willarieldurants1.png" alt="Will-ariel-durants1" class="w-100">
+              </div>
+            </div>
+            <div
+              class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white  flex-md-nowrap flex-wrap-reverse position-relative">
+              <div class="max-md-w-551 pt-4 pt-md-0">
+                <h2 class="fw-bold line-height-55 fs-4xl color-black m-0 font-Helvetica  ">Prize-Winning Projects</h2>
+                <h5 class="fw-bold fs-xl font-Helvetica line-height-27  m-0 pt-3">The Story of <span
+                    class="heading">Civilization</span>
+                </h5>
+                <h6 class=" fs-md font-Helvetica pt-3 m-0 color-gray  line-height-25 fw-normal">Choose your topic. Find
+                  expert guidance. Create a thesis and bring it to life. World-Class. These books cover various periods
+                  and topics in history, offering different perspectives and insights into different civilizations and
+                  events.</h6>
+                <h5 class="fw-normal fs-md font-Helvetica line-height-25 pt-3  m-0 pb-md-48 pb-4">Will Durant & Ariel
+                  Durant</h5>
+                <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+                    class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">Read More</span>
+                  <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn" class="z-1"></button>
+              </div>
+              <div class="p-18 slider-img rounded-1 w-100 max-md-w-337">
+                <img src="./assets/img/Willarieldurants1.png" alt="Will-ariel-durants1" class="w-100">
+              </div>
+            </div>
+            <div
+              class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white  flex-md-nowrap flex-wrap-reverse position-relative">
+              <div class="max-md-w-551 pt-4 pt-md-0">
+                <h2 class="fw-bold line-height-55 fs-4xl color-black m-0 font-Helvetica  ">Prize-Winning Projects</h2>
+                <h5 class="fw-bold fs-xl font-Helvetica line-height-27  m-0 pt-3">The Story of <span
+                    class="heading">Civilization</span>
+                </h5>
+                <h6 class=" fs-md font-Helvetica pt-3 m-0 color-gray  line-height-25 fw-normal">Choose your topic. Find
+                  expert guidance. Create a thesis and bring it to life. World-Class. These books cover various periods
+                  and topics in history, offering different perspectives and insights into different civilizations and
+                  events.</h6>
+                <h5 class="fw-normal fs-md font-Helvetica line-height-25 pt-3  m-0 pb-md-48 pb-4">Will Durant & Ariel
+                  Durant</h5>
+                <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+                    class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">Read More</span>
+                  <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn" class="z-1"></button>
+              </div>
+              <div class="p-18 slider-img rounded-1 w-100 max-md-w-337">
+                <img src="./assets/img/Willarieldurants1.png" alt="Will-ariel-durants1" class="w-100">
+              </div>
+            </div>
+            <div
+              class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white  flex-md-nowrap flex-wrap-reverse position-relative">
+              <div class="max-md-w-551 pt-4 pt-md-0">
+                <h2 class="fw-bold line-height-55 fs-4xl color-black m-0 font-Helvetica">Prize-Winning Projects</h2>
+                <h5 class="fw-bold fs-xl font-Helvetica line-height-27  m-0 pt-3">The Story of <span
+                    class="heading">Civilization</span>
+                </h5>
+                <h6 class=" fs-md font-Helvetica pt-3 m-0 color-gray  line-height-25 fw-normal">Choose your topic. Find
+                  expert guidance. Create a thesis and bring it to life. World-Class. These books cover various periods
+                  and topics in history, offering different perspectives and insights into different civilizations and
+                  events.</h6>
+                <h5 class="fw-normal fs-md font-Helvetica line-height-25 pt-3  m-0 pb-md-48 pb-4">Will Durant & Ariel
+                  Durant</h5>
+                <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+                    class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">Read More</span>
+                  <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn" class="z-1"></button>
+              </div>
+              <div class="p-18 slider-img rounded-1 w-100 max-md-w-337">
+                <img src="./assets/img/Willarieldurants1.png" alt="Will-ariel-durants1" class="w-100">
+              </div>
+            </div>
+          </div>
+          <button
+            class="pre-btn d-xl-block d-none slick-btn rounded-circle  d-flex justify-content-center align-items-center position-absolute">
+            <svg
+              style="width: 35px; color:#E9CE98; height: 23px;vertical-align: middle;fill: currentColor;overflow: hidden;  "
+              viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+              <path d="M688 224 656 192 336 512 336 512 320 528 656 864 688 832 384 528Z" />
+            </svg>
+          </button>
+          <button
+            class="next-btn d-xl-block d-none slick-btn rounded-circle d-flex justify-content-center align-items-center position-absolute">
+            <svg
+              style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;color: #E9CE98; overflow: hidden;"
+              viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M251.069046 983.355077l471.355077-471.355077L251.069046 40.644923A23.809313 23.809313 0 0 1 284.740267 6.973703l488.190687 488.190687a23.809313 23.809313 0 0 1 0 33.67122L284.740267 1017.026297A23.809313 23.809313 0 0 1 251.069046 983.355077z" />
+            </svg>
+          </button>
         </div>
       </div>
     </div>
