--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       </div>
     </div>
   </section>
-  <section class="position-relative" >
+  <section class="position-relative d-none" >
     <img src="./assets/img/svg/Ellipse41.svg" alt="Ellipse41"
       class="position-absolute Ellipse41 d-none d-md-block z-n1 animation-fadein">
     <img src="./assets/img/Groupslick.png" alt="groupslick" class="position-absolute groupslick z-n1 ">
@@ -437,6 +437,84 @@
       </div>
     </div>
   </section>
+  <section class="bg-Services5 position-relative">
+    <img src="./assets/img/svg/Ellipse91.svg" alt="ellipse" class="position-absolute Ellipse91 max-w-399 w-100  z-0" >
+    <img src="./assets/img/svg/Ellipse92.svg" alt="ellipse" class="position-absolute Ellipse92 max-w-399 w-100 ">
+    <div class="container max-w-1140 ">
+      <h2 class="fw-bold fs-4xl text-center line-height-55 m-0 heading pt-lg-120 pt-sm-60 pt-5 pb-lg-64 pb-4 font-Helvetica">
+        Submission Timeline</h2>
+      <div class="pt-lg-64 pt-4 pt-sm-0 pb-48">
+        <div class="timeline-item">
+          <div class="position-absolute left-line"></div>
+          <div class="timeline-icon">
+            <img src="./assets/img/svg/Step1.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-step text-white fs-xl line-height-38 fw-bold font-Helvetica">Step 1</h4>
+          <div class="timeline-content pb-3 border-bottom-gray">
+            <h5 class="font-Helvetica fw-noraml text-white fs-md line-height-25  m-0">Preliminary Submission</h5>
+            <h6 class="font-Helvetica fw-normal fs-md line-height-25 text-white m-0">The first step to publishing in The
+              Julian Project is first sending us a preliminary submission which includes information about the author,
+              paper abstract, and a few short answer responses about the paper.</h6>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="position-absolute left-line"></div>
+          <div class="timeline-icon ">
+            <img src="./assets/img/svg/Step2.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-step text-white fs-xl line-height-38 fw-bold font-Helvetica">Step 2</h4>
+          <div class="timeline-content pb-3 border-bottom-gray">
+            <h5 class="font-Helvetica fw-noraml text-white fs-md line-height-25  m-0">Final Submission</h5>
+            <h6 class="font-Helvetica fw-normal fs-md line-height-25 text-white m-0">The next step to publishing is to
+              submit the final version of your paper and a separate annotated bibliography</h6>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="position-absolute left-line"></div>
+          <div class="timeline-icon ">
+            <img src="./assets/img/svg/Step3.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-step text-white fs-xl line-height-38  fw-bold font-Helvetica">Step 3</h4>
+          <div class="timeline-content pb-3 border-bottom-gray">
+            <h5 class="font-Helvetica fw-noraml text-white fs-md line-height-25  m-0">Reviewal Process</h5>
+            <h6 class="font-Helvetica fw-normal fs-md line-height-25 text-white m-0">The next step to publishing is the
+              reviewal process. Once a paper is accepted for publication, there is three week turn-around to make final
+              edits before final publication.</h6>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="position-absolute left-line"></div>
+          <div class="timeline-icon ">
+            <img src="./assets/img/svg/Step4.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-step text-white fs-xl line-height-38  fw-bold font-Helvetica">Step 4</h4>
+          <div class="timeline-content pb-3 border-bottom-gray">
+            <h5 class="font-Helvetica fw-noraml text-white fs-md line-height-25  m-0">Publishing</h5>
+            <h6 class="font-Helvetica fw-normal fs-md line-height-25 text-white m-0">During this stage, the paper is set
+              to be published in the next quarterly issue of The Julian Project. Authors will receive a notice one month
+              prior to publication.</h6>
+          </div>
+        </div>
+        <div class="timeline-item pb-0">
+          <div class="position-absolute"></div>
+          <div class="timeline-icon">
+            <img src="./assets/img/svg/Step5.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-step text-white fs-xl line-height-38  fw-bold font-Helvetica">Step 5</h4>
+          <div class="timeline-content pb-3 border-bottom-gray">
+            <h5 class="font-Helvetica fw-noraml text-white fs-md line-height-25  m-0">Prizes</h5>
+            <h6 class="font-Helvetica fw-normal fs-md line-height-25 text-white m-0">At the end of the summer, the top 8
+              best essays of the year will receive $60,000 in cash prizes.</h6>
+          </div>
+        </div>
+      </div>
+      <div class="pb-lg-120 pb-sm-60 pb-5 d-flex justify-content-center">
+        <button class="btn-1 z-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+            class="text  fw-bold fs-lg line-height-32 font-Helvetica heading">Check out our FAQ</span>
+          <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
+      </div>
+    </div>
+  </section>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
